trunk/Archive2/4f/aacd121e059d76/output
main.cpp:21:65: error: use of undeclared identifier 'max_num'
        std::array<float, 2> texcoord = get_coords( sprite_num, max_num, sprite_width, sprite_height );
                                                                ^
1 error generated.
